tests/ui/borrowck/borrowck-uninit-in-assignop.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:6:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x += 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:9:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x -= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:12:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x *= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:15:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x /= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:18:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x %= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:21:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x ^= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:24:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x &= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:27:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x |= 1;
   |     ^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:30:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x <<= 1;
   |     ^^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-in-assignop.rs:33:5
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     x >>= 1;
   |     ^^^^^^^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0381`.
